# lobster

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: throughput.py
data/: sample_messages.csv
docs/: design.md
examples/: basic_book.py  market_maker_demo.py  render_hero.py  walkthrough.ipynb
lobster/: __init__.py  analytics.py  book.py  impact.py  latency.py  matching.py  order.py  replay.py  sim.py  tape.py
lobster/agents/: __init__.py  base.py  market_maker.py  momentum.py  noise.py
tests/: test_agents.py  test_analytics.py  test_book.py  test_impact.py  test_latency.py  test_matching.py  test_order.py  test_replay.py  test_sim.py  test_tape.py
