[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lobster"
version = "0.1.0"
description = "Limit order book microstructure simulator"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "superkush06"}]
requires-python = ">=3.11"
keywords = ["quant", "trading", "limit-order-book", "microstructure", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.5"]
plot = ["matplotlib>=3.7"]

[tool.setuptools.packages.find]
include = ["lobster*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
